readme.txt
arp1.c:33:24: error: storage size of ‘sa’ isn’t known
     struct sockaddr_ll sa;
                        ^

